--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "omiga-cli",
   "version": "0.1.0",
-  "description": "A vue cli",
+  "description": "A vue cli,support use your own template",
   "bin": {
     "z": "bin/z"
   },
@@ -12,6 +12,7 @@
   "homepage": "https://github.com/Kerinlin/o-cli",
   "author": "kerinlin",
   "license": "MIT",
+  "private":false,
   "dependencies": {
     "chalk": "^3.0.0",
     "commander": "^4.0.1",
